Change navbar and footer

--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
               <a class="nav-link">Student Level<i class="fas fa-chevron-down"></i></a>
               <ul class="dropdown-menu">
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#slabout" data-toggle="tab" role="tab">About<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="slabout.html">About<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slabout" type="button" role="tab" aria-controls="home" aria-selected="true">About</i></button> -->
+                  <!-- <a class="dropdown-item" href="#slabout" data-toggle="tab" role="tab">About</i></a> -->
+                  <a class="dropdown-item" href="slabout.html">About</i></a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#slbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="slbenefit.html">Benefit<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit</i></button> -->
+                  <!-- <a class="dropdown-item" href="#slbenefit" data-toggle="tab" role="tab">Benefit</i></a> -->
+                  <a class="dropdown-item" href="slbenefit.html">Benefit</a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#sltimeline" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#sltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="sltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#sltimeline" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline</i></button> -->
+                  <!-- <a class="dropdown-item" href="#sltimeline" data-toggle="tab" role="tab">Timeline</i></a> -->
+                  <a class="dropdown-item" href="sltimeline.html">Timeline</i></a>
                 </li>
                 </ul>
             </li>
@@ -70,19 +70,19 @@
               <a class="nav-link">College Level<i class="fas fa-chevron-down"></i></a>
               <ul class="dropdown-menu">
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About</i></button> -->
+                  <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About</i></a> -->
+                  <a class="dropdown-item" href="clabout.html">About</i></a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#clbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="clbenefit.html">Benefit<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit</i></button> -->
+                  <!-- <a class="dropdown-item" href="#clbenefit" data-toggle="tab" role="tab">Benefit</i></a> -->
+                  <a class="dropdown-item" href="clbenefit.html">Benefit</i></a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#cltimeline " type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#cltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="cltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#cltimeline " type="button" role="tab" aria-controls="home" aria-selected="true">Timeline</i></button> -->
+                  <!-- <a class="dropdown-item" href="#cltimeline" data-toggle="tab" role="tab">Timeline</i></a> -->
+                  <a class="dropdown-item" href="cltimeline.html">Timeline</i></a>
                 </li>
                 </ul>
             </li>
@@ -144,7 +144,7 @@
                 <img src="/img/logo-ise-2021-putih.svg" alt="logo ise 2021" class="img-fluid" width="120px" height="auto">
               </div>
               <div class="col-12 col-sm-6 text-center text-sm-right" id="footer-right">
-                <h1>Find us on our social media</h1>
+                <h1>Temukan Kami di Sosial Media!</h1>
                 <div class="listsocmed">
                   <a href="https://ise-its.com/" target="_blank" title="Website">
                     <i class="fas fa-globe" aria-hidden="true"></i>
@@ -196,13 +196,12 @@
                   <li><a href="#">Virtual Intern & Job Fair</a></li>
                 </ul>
               </div>
-              <div class="col col-sm-4 text-center text-sm-right" id="footer-right">
-                <h1>
-                  <span>
-                    <i class="fa fa-copyright" aria-hidden="true"></i>
-                  </span>
-                  2021 ISE
-                </h1>
+              <div class="col col-sm-3 text-center text-sm-left shop">
+                <ul>
+                  <p><strong>SHOP</strong></p>
+                  <li><a href="#">Merchandise<i class="fas fa-external-link-alt"></i></a></li>
+                  <li><a href="#">Garage Sale<i class="fas fa-external-link-alt"></i></a></li>
+                </ul>
               </div>
             </div>
             </div>
