--- a/slbenefit.html
+++ b/slbenefit.html
@@ -49,19 +49,19 @@
               <a class="nav-link active">Student Level<i class="fas fa-chevron-down"></i></a>
               <ul class="dropdown-menu">
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#slabout" data-toggle="tab" role="tab">About<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="slabout.html">About<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slabout" type="button" role="tab" aria-controls="home" aria-selected="true">About</button> -->
+                  <!-- <a class="dropdown-item" href="#slabout" data-toggle="tab" role="tab">About</a> -->
+                  <a class="dropdown-item" href="slabout.html">About</a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#slbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item active" href="slbenefit.html">Benefit<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#slbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit</button> -->
+                  <!-- <a class="dropdown-item" href="#slbenefit" data-toggle="tab" role="tab">Benefit</a> -->
+                  <a class="dropdown-item active" href="slbenefit.html">Benefit</a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#sltimeline" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#sltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="sltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#sltimeline" type="button" role="tab" aria-controls="home" aria-selected="true">Timeline</button> -->
+                  <!-- <a class="dropdown-item" href="#sltimeline" data-toggle="tab" role="tab">Timeline</a> -->
+                  <a class="dropdown-item" href="sltimeline.html">Timeline</a>
                 </li>
                 </ul>
             </li>
@@ -70,19 +70,19 @@
               <a class="nav-link">College Level<i class="fas fa-chevron-down"></i></a>
               <ul class="dropdown-menu">
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="clabout.html">About<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clabout" type="button" role="tab" aria-controls="home" aria-selected="true">About</button> -->
+                  <!-- <a class="dropdown-item" href="#clabout" data-toggle="tab" role="tab">About</a> -->
+                  <a class="dropdown-item" href="clabout.html">About</a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#clbenefit" data-toggle="tab" role="tab">Benefit<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="clbenefit.html">Benefit<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#clbenefit" type="button" role="tab" aria-controls="home" aria-selected="true">Benefit</button> -->
+                  <!-- <a class="dropdown-item" href="#clbenefit" data-toggle="tab" role="tab">Benefit</a> -->
+                  <a class="dropdown-item" href="clbenefit.html">Benefit</a>
                 </li>
                 <li>
-                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#cltimeline " type="button" role="tab" aria-controls="home" aria-selected="true">Timeline<i class="fas fa-chevron-right"></i></button> -->
-                  <!-- <a class="dropdown-item" href="#cltimeline" data-toggle="tab" role="tab">Timeline<i class="fas fa-chevron-right"></i></a> -->
-                  <a class="dropdown-item" href="cltimeline.html">Timeline<i class="fas fa-chevron-right"></i></a>
+                  <!-- <button class="nav-link" id="home-tab" data-toggle="tab" data-target="#cltimeline " type="button" role="tab" aria-controls="home" aria-selected="true">Timeline</button> -->
+                  <!-- <a class="dropdown-item" href="#cltimeline" data-toggle="tab" role="tab">Timeline</a> -->
+                  <a class="dropdown-item" href="cltimeline.html">Timeline</a>
                 </li>
                 </ul>
             </li>
