--- a/college-level.html
+++ b/college-level.html
@@ -40,13 +40,26 @@
         <div class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
           <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" href="after-login.html">Home</a>
             </li>
-            <a href="student-level.html" class="nav-link">Student Level</a>
-            <a href="college-level.html" class="nav-link">College Level</a>
+              <a href="student-level.html" class="nav-link">Student Level</a>
+              <a href="college-level.html" class="nav-link active">College Level</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link" id="usernav"><i class="far fa-user"></i> User <i class="fas fa-chevron-down"></i></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="index.html">Profile</i></a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="index.html">Dashboard BIONIX</i></a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="index.html">Keluar</i></a>
+                </li>
+              </ul>
+            </li>
           </ul>
-          <a class="nav-link login" href="after-login.html">Login</a>  
         </div>
         <button class="navbar-toggle menu-btn mr-5" data-toggle="collapse" data-target="#collapse_target">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -125,7 +138,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="/img/juara1-bionix-sl.svg" id="juara1"class ="img-fluid" alt="">
+                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Freepass SNMPTN<br>Sistem Informasi<br>ITS 2022<br><span>+ Rp 5.000.000<br>Sertifikat</span></p>
                       </div>
                     </div>
@@ -158,7 +171,7 @@
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
-                        <img src="/img/juara1-bionix-sl.svg" id="juara1" class ="img-fluid" alt="">
+                        <img src="/img/juara1-bionix-sl.svg" class ="img-fluid" alt="">
                         <p>Rp 3.000.000<br><span>+ Sertifikat</span></p>
                       </div>
                     </div>
@@ -304,7 +317,7 @@
                 <h2>&copy; 2021 ISE</h2>
               </div>
             </div>
-            </div>
+            </div>  
           </footer>
       
 
