student level header

--- a/student-level.html
+++ b/student-level.html
@@ -36,7 +36,7 @@
   
   <!--navbar section-->
   <div class="nav-container">
-      <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5" id="navbarsl">
+      <nav class="navbar navbarsl navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
         <div class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
           <ul class="border-0 nav navbar-nav nav-tabs ml-auto">
@@ -65,13 +65,27 @@
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
       </nav>
-      <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid" id="navbar2">
+      <nav class="navbar navbarsl navbar-custom fixed-top navbar-expand-lg container-fluid" id="navbar2">
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
           <ul class="border-0 nav navbar-nav nav-tabs ml-5">
             <li class="nav-item">
-              <a class="nav-link" href="after-login.html">Home</a>
+              <a class="nav-link" href="#tahapan">Tahapan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#persyaratan">Persyaratan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#fasilitas">Fasilitas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#hadiah">Hadiah</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#timeline">Timeline</a>
             </li>
           </ul>
+          <a href="#" class="nav-link ml-auto mr-5 btn">Daftar</a>
+          <a href="#" class="nav-link mr-5 btn">Download</a>
         </div>
         <button class="navbar-toggle menu-btn mr-5" data-toggle="collapse" data-target="#collapse_target">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -80,26 +94,20 @@
    </div>
 
 
-        <!-- swiper section start -->
-        <div class="swiper-container mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide slide1">
-              <div class="about">
-              <img src="/img/line-bionix.svg" class="img-fluid" alt="">
-              <h1>BUSINESS AND IT OLYMPIAD<br>
-                ON INFORMATION SYSTEMS EXPO</h1>
-                <p>Business and IT Olympiad on Information Systems Expo, olimpiade bisnis dan IT terbesar di Indonesia<br> untuk tingkat pelajar SMA/SMK sederajat dan mahasiswa.</p>
-                <a href="#" class="btn">KENALI LEBIH LANJUT</a>
-              </div>
+      <!-- header section start -->
+      <header class="header">
+        <div class="container">
+          <div class="row">
+            <div class="col-3 text-right">
+              <img src="/img/medali-sl-putih.svg" class="img-fluid" alt="">
             </div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
+            <div class="col-8 text-left">
+              <h1><img src="/img/line-putih.svg" class="img-fluid" alt="" style="width: 10%;">   BIONIX Student Level</h1>
+              <p>Olimpiade bisnis dan IT terbesar di Indonesia untuk tingkat pelajar SMA/SMK sederajat. Bionix Student Level dilaksanakan melalui empat tahapan kompetisi dengan konsep acara daring penuh</p>
+            </div>
           </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-pagination"></div>
         </div>
-          
+      </header>
 
         <!-- kategori lomba section start -->
         <div class="kategori-lomba container-fluid text-center">
