--- a/student-level.html
+++ b/student-level.html
@@ -35,7 +35,7 @@
 <body class="bg">
   
   <!--navbar section-->
-  <div class="nav-container">
+
       <nav class="navbar navbarsl navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
         <div class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
@@ -84,14 +84,14 @@
               <a class="nav-link" href="#timeline">Timeline</a>
             </li>
           </ul>
-          <a href="#" class="nav-link ml-auto mr-5 btn">Daftar</a>
-          <a href="#" class="nav-link mr-5 btn">Download</a>
+          <a href="#" class="nav-link" id="daftar">Daftar</a>
+          <a href="#" class="nav-link" id="guidebook"><img src="/img/DownloadSimple.svg" alt=""> Guidebook</a>
         </div>
         <button class="navbar-toggle menu-btn mr-5" data-toggle="collapse" data-target="#collapse_target">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
       </nav>
-   </div>
+
 
 
       <!-- header section start -->
