Student Level versi 2.0

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
         <div class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
-          <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
+          <ul class="border-0 nav navbar-nav nav-tabs ms-auto" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" href="index.html">Home</a>
             </li>
@@ -48,7 +48,7 @@
           </ul>
           <a class="nav-link login" href="after-login.html">Login</a>  
         </div>
-        <button class="navbar-toggle menu-btn mr-5" data-toggle="collapse" data-target="#collapse_target">
+        <button class="navbar-toggle menu-btn mr-5" data-bs-toggle="collapse" data-bs-target="#collapse_target">
           <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
       </nav>
@@ -101,18 +101,18 @@
           <div class="button-hadiah">
             <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
               <li class="nav-item" role="presentation">
-                <button class="nav-link active px-5 py-3 m-3" id="hadiahsl-tab" data-toggle="tab" data-target="#hadiahsl" type="button" role="tab" aria-controls="hadiahsl" aria-selected="true"><img src="/img/medali-sl.svg" alt=""> Bionix Student Level</button>
+                <button class="nav-link active px-5 py-3 m-3" id="hadiahsl-tab" data-bs-toggle="tab" data-bs-target="#hadiahsl" type="button" role="tab" aria-controls="hadiahsl" aria-selected="true"><img src="/img/medali-sl.svg" alt=""> Bionix Student Level</button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="nav-link px-5 py-3 m-3" id="hadiahcl-tab" data-toggle="tab" data-target="#profile" type="button" role="tab" aria-controls="hadiahcl" aria-selected="false"><img src="/img/medali-cl.svg" alt=""> Bionix College Level</button>
+                <button class="nav-link px-5 py-3 m-3" id="hadiahcl-tab" data-bs-toggle="tab" data-bs-target="#hadiahcl" type="button" role="tab" aria-controls="hadiahcl" aria-selected="false"><img src="/img/medali-cl.svg" alt=""> Bionix College Level</button>
               </li>
             </ul>
           </div>
           <div class="tab-content">
             <div class="tab-pane fade show active" id="hadiahsl" role="tabpanel">
               <div class="container">
-                <div class="d-flex row ">
-                  <div class="d-flex col justify-content-end">
+                <div class="row ">
+                  <div class="col justify-content-end">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -121,7 +121,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-center">
+                  <div class="col justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -130,7 +130,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-start">
+                  <div class="col justify-content-start">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -142,7 +142,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel">
+            <div class="tab-pane fade" id="hadiahcl" role="tabpanel">
               <div class="container">
                 <div class="d-flex row ">
                   <div class="d-flex col justify-content-end">
@@ -154,7 +154,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-center">
+                  <div class="col justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -163,7 +163,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-start">
+                  <div class="col justify-content-start">
                     <div class="card juara2">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -311,7 +311,7 @@
   <!--Script-->
   <script src="js/jquery.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/countdown.js"></script>
   <script src="js/custom.js"></script>
 </body>
