--- a/after-login.html
+++ b/after-login.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
         <div class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
-          <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
+          <ul class="border-0 nav navbar-nav nav-tabs ms-auto" role="tablist">
             <li class="nav-item" role="presentation">
               <a class="nav-link active" href="after-login.html">Home</a>
             </li>
