--- a/college-level.html
+++ b/college-level.html
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-custom fixed-top navbar-expand-lg container-fluid mb-5">
         <div class="logo"><a class="navbar-brand" href="index.html"><img src="img/logo-ise-2021.svg" alt="logo ISE! 2021" /></a></div>
         <div class="collapse navbar-collapse w-100 order-3 dual-collapse2 list" id="collapse_target">
-          <ul class="border-0 nav navbar-nav nav-tabs ml-auto" role="tablist">
+          <ul class="border-0 nav navbar-nav nav-tabs ms-auto" role="tablist">
             <li class="nav-item" role="presentation">
               <a class="nav-link" href="after-login.html">Home</a>
             </li>
@@ -124,8 +124,8 @@
           <div class="tab-content">
             <div class="tab-pane fade show active" id="hadiahsl" role="tabpanel">
               <div class="container">
-                <div class="d-flex row ">
-                  <div class="d-flex col justify-content-end">
+                <div class="row">
+                  <div class="col justify-content-end">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -134,7 +134,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-center">
+                  <div class="col justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -143,7 +143,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-start">
+                  <div class="col justify-content-start">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 2</h4>
@@ -157,8 +157,8 @@
             </div>
             <div class="tab-pane fade" id="profile" role="tabpanel">
               <div class="container">
-                <div class="d-flex row ">
-                  <div class="d-flex col justify-content-end">
+                <div class="row ">
+                  <div class="col justify-content-end">
                     <div class="card juara3">
                       <div class="card-body">
                         <h4>Juara 3</h4>
@@ -167,7 +167,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-center">
+                  <div class="col justify-content-center">
                     <div class="card">
                       <div class="card-body">
                         <h4>Juara 1</h4>
@@ -176,7 +176,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex col justify-content-start">
+                  <div class="col justify-content-start">
                     <div class="card juara2">
                       <div class="card-body">
                         <h4>Juara 2</h4>
